tests/errors/invalid-attrs.rs
fn main(){

}

#[adtest::adtest(somethings)]
fn invalid_test(){

}